--- a/scratch.html
+++ b/scratch.html
@@ -10,6 +10,7 @@
     <div class="anchor">
         <a href="#scratch.html" class="anchor">Soccer</a> |
         <a href="index.html" class="anchor">Professional Page</a> |
+        <a href="game.html" class="anchor">Game</a> |
         <a href="#viz1733615133438" class="anchor">Tableau</a>
     </div>
     
