--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Brigham Young University — Marriott School of Business</h3>
                         <div class="subheading mb-3">Bachelor of Science in Finance</div>
-                        <div>Finance - Commerical Real Estate</div>
+                        <div>Finance - Commercial Real Estate</div>
                         <p>GPA: 3.67 / 4.00</p>
                             <ul>
                                 <li>Utah Regents Scholarship recipient, merit scholarship for academic proficiency (3.3+ GPA, 22+ on ACT, required courses)</li>
